; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_NewGame.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_m_menu.c_M_NewGame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@netgame = common dso_local global i64 0, align 8
@demoplayback = common dso_local global i32 0, align 4
@NEWGAME = common dso_local global i32 0, align 4
@gamemode = common dso_local global i64 0, align 8
@commercial = common dso_local global i64 0, align 8
@NewDef = common dso_local global i32 0, align 4
@EpiDef = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @M_NewGame(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @netgame, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %11

5:                                                ; preds = %1
  %6 = load i32, i32* @demoplayback, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %5
  %9 = load i32, i32* @NEWGAME, align 4
  %10 = call i32 @M_StartMessage(i32 %9, i32* null, i32 0)
  br label %19

11:                                               ; preds = %5, %1
  %12 = load i64, i64* @gamemode, align 8
  %13 = load i64, i64* @commercial, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = call i32 @M_SetupNextMenu(i32* @NewDef)
  br label %19

17:                                               ; preds = %11
  %18 = call i32 @M_SetupNextMenu(i32* @EpiDef)
  br label %19

19:                                               ; preds = %8, %17, %15
  ret void
}

declare dso_local i32 @M_StartMessage(i32, i32*, i32) #1

declare dso_local i32 @M_SetupNextMenu(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
